[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scripts/altar_ui.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cbcqqnu7urkec" path="res://sprites/ui/blood_altar_ui_bar_under.png" id="2"]
[ext_resource type="Texture2D" uid="uid://cb4673josyno8" path="res://sprites/ui/label.png" id="3"]
[ext_resource type="FontFile" uid="uid://bkm60lts17rje" path="res://fonts/000webfont1.ttf" id="5"]
[ext_resource type="Texture2D" uid="uid://vkwph1nbxvct" path="res://sprites/ui/blood_altar_ui_bar_progress.png" id="6"]

[node name="altar_ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.857
anchor_top = 0.474
anchor_right = 0.857
anchor_bottom = 0.474
offset_left = -110.56
offset_top = -159.4
offset_right = 98.4399
offset_bottom = 174.6
scale = Vector2( 1, 1.16 )
color = Color( 0.227451, 0.227451, 0.227451, 0 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 0.857
anchor_top = 0.474
anchor_right = 0.857
anchor_bottom = 0.474
offset_left = -110.56
offset_top = -159.4
offset_right = 98.4398
offset_bottom = 174.6
scale = Vector2( 1, 1.16 )
color = Color( 0.227451, 0.227451, 0.227451, 0.372549 )

[node name="orb_progress" type="TextureProgressBar" parent="."]
anchor_left = 0.851
anchor_top = 0.43
anchor_right = 0.851
anchor_bottom = 0.432
offset_left = -68.08
offset_top = 136.0
offset_right = -51.08
offset_bottom = 202.8
rotation = -90.0
scale = Vector2( 16, 2 )
value = 100.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 6 )
texture_progress_offset = Vector2( 1.038, 1.06 )

[node name="sacrifice" type="TextureButton" parent="."]
self_modulate = Color( 0.996078, 0, 0, 1 )
anchor_left = 0.85
anchor_top = 0.5
anchor_right = 0.85
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 96.0
offset_right = -48.0
offset_bottom = 112.0
scale = Vector2( 4, 4 )
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="sacrifice"]
anchor_left = 0.505
anchor_top = 0.5
anchor_right = 0.505
anchor_bottom = 0.5
offset_left = -16.99
offset_top = -5.0
offset_right = 323.09
offset_bottom = 80.2895
scale = Vector2( 0.1, 0.1 )
theme_override_fonts/font = ExtResource( 5 )
text = "sacrifice"

[node name="start" type="TextureButton" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.85
anchor_top = 0.5
anchor_right = 0.85
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 148.0
offset_right = -48.0
offset_bottom = 164.0
scale = Vector2( 4, 4 )
toggle_mode = true
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="start"]
anchor_left = 0.505
anchor_top = 0.5
anchor_right = 0.505
anchor_bottom = 0.5
offset_left = -10.74
offset_top = -4.75
offset_right = 329.34
offset_bottom = 80.5395
scale = Vector2( 0.1, 0.1 )
theme_override_fonts/font = ExtResource( 5 )
text = "start"

[connection signal="mouse_entered" from="ColorRect" to="." method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect" to="." method="_on_ColorRect_mouse_exited"]
[connection signal="pressed" from="sacrifice" to="." method="_on_Button_pressed"]
[connection signal="button_down" from="start" to="." method="_on_start_button_down"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="toggled" from="start" to="." method="_on_start_toggled"]
